# Exhibit

./: .gitignore  README.md  pyproject.toml  update_translations.sh
build-aux/: imagemagick.json  io.github.nokse22.Exhibit.json  libf3d.json  libktx.json
data/: configurations.json  io.github.nokse22.Exhibit.desktop.in  io.github.nokse22.Exhibit.gschema.xml  io.github.nokse22.Exhibit.metainfo.xml.in  style-dark.css  style.css
docs/: MELHORIAS_A_E.md
po/: Exhibit.pot  POTFILES  bg.po  de.po  es.po  fr.po  hi.po  it.po  nb.po  pt_BR.po  ru.po  uk.po
src/: __init__.py  about_info.py  camera_nav.py  camera_sync.py  camera_views.py  cli_render.py  drop_paths.py  exhibit.in  file_patterns.py  gltf_pack.py  gltf_scene_graph.py  ktx2_transcode.py  logger_lib.py  main.py  mesh_stats.py  meshopt_decompress.py  meson.build  open_errors.py  path_utils.py  periodic_checker.py  recent_files.py  session_files.py  settings_compare.py  settings_manager.py  skin_weights.py  vector_math.py  video_encode.py  warm_load.py  window.py  window_animation.py  window_chrome.py  window_export.py  window_file_watch.py  window_inspect.py  window_layout.py  window_lifecycle.py  window_load.py  window_object_tree.py  window_preferences.py  window_settings_io.py  (+3 more)
src/widgets/: __init__.py  f3d_viewer.py  f3d_viewer_load.py  file_row.py  viewer_tab.py
tests/: conftest.py  glb_factory.py  test_about_info.py  test_camera_nav.py  test_camera_orbit_grid.py  test_camera_sync.py  test_camera_views.py  test_camera_views_extended.py  test_cli_render.py  test_cli_render_extended.py  test_drop_paths.py  (+44 more)
(+14 files in other folders)
